recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(2.4)
 required: Int
    spiral(100,42,1,2.4);
                    ^